--- a/app/src/main/res/xml/pref_settings.xml
+++ b/app/src/main/res/xml/pref_settings.xml
@@ -6,4 +6,10 @@
         android:key="force_global_mode"
         android:summary="@string/pref_force_global_summary"
         android:title="@string/pref_title_force_global" />
+    <SwitchPreference
+        android:defaultValue="false"
+        android:icon="@drawable/ic_sync"
+        android:key="is_dynamic_modules"
+        android:summary="@string/pref_dynamic_modules_summary"
+        android:title="@string/pref_title_dynamic_modules" />
 </PreferenceScreen>
